--- a/todo.txt
+++ b/todo.txt
@@ -6,10 +6,13 @@
  -decrease them strongly (20-40%)
 -ensure the 'rounding logic' is working
  -criteria are rounded
+ -duration is rounded
  -'s criteria' is reapplied
 -merge
  -debug info
  -rank changes
+
+make ranks gentler; "M rank" should be lower (about 95%; where SSS is now)
 
 
 bug: stoppie tomato appears in asparagus rows?
@@ -36,22 +39,22 @@ SceneTransition.fade_out(): prints some messages...
 make these about 40% easier?
 40%: career/dark/no_smoking_section_2: player time=209 (not 117), z_score=-10.466644
 20%: career/dark/cheddarbox_blitz: player score=2302 (not 3645), z_score=-8.855105
+20%: career/dark/a_little_extra: player score=1659 (not 2374), z_score=-7.235881
+20%: career/dark/sharky_cheese_2: player score=2231 (not 3195), z_score=-4.371027
+0%: career/dark/secret_brownies: player time=162 (not 135), z_score=-3.910333
+20%: career/dark/sweet_dreams: player score=1962 (not 2331), z_score=-3.80896
+0%: career/dark/a_little_garbage_2: player score=1301 (not 1526), z_score=-3.544811
+20%: career/dark/strawberry_shortcut: player score=1999 (not 2289), z_score=-3.046373
+20%: career/dark/three_minute_sprint: player score=2903 (not 3264), z_score=-2.659478
+0%: career/dark/it_takes_two: player score=2064 (not 2319), z_score=-1.593931
 ----------------------------------------
-career/dark/a_little_extra: player score=1659 (not 2374), z_score=-7.235881
-career/dark/sharky_cheese_2: player score=2231 (not 3195), z_score=-4.371027
-career/dark/secret_brownies: player time=162 (not 135), z_score=-3.910333
-career/dark/sweet_dreams: player score=1962 (not 2331), z_score=-3.80896
-career/dark/a_little_garbage_2: player score=1301 (not 1526), z_score=-3.544811
-career/dark/strawberry_shortcut: player score=1999 (not 2289), z_score=-3.046373
-career/dark/three_minute_sprint: player score=2903 (not 3264), z_score=-2.659478
-career/dark/it_takes_two: player score=2064 (not 2319), z_score=-1.593931
 
 training mode?
-practice/marathon_expert: player score=5618 (not 8213), z_score=-7.589998
-practice/marathon_normal: player score=3524 (not 2956), z_score=4.607331
-practice/marathon_hard: player score=6371 (not 5667), z_score=2.982667
-practice/ultra_normal: player time=16 (not 17), z_score=12.433121
-practice/ultra_hard: player time=61 (not 56), z_score=-12.433121
-practice/ultra_expert: player time=149 (not 149), z_score=0
-practice/sprint_normal: player score=2425 (not 2425), z_score=0
-practice/sprint_expert: player score=4365 (not 4365), z_score=0
+60%: practice/marathon_expert: player score=5618 (not 8213), z_score=-7.589998
+90%: practice/marathon_normal: player score=3524 (not 2956), z_score=4.607331
+90%: practice/marathon_hard: player score=6371 (not 5667), z_score=2.982667
+90%: practice/ultra_normal: player time=16 (not 17), z_score=12.433121
+90%: practice/ultra_hard: player time=61 (not 56), z_score=-12.433121
+60%: practice/ultra_expert: player time=149 (not 149), z_score=0
+90%: practice/sprint_normal: player score=2425 (not 2425), z_score=0
+60%: practice/sprint_expert: player score=4365 (not 4365), z_score=0
